<resources>
    <string name="app_name">Landmark Remark</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_search">Search Marker</string>

    <!--Nav-->
    <string name="menu_home">Home</string>
    <string name="menu_mymarkers">My Landmarks</string>
    <string name="menu_allmarkers_onmap">All Landmarks On Map</string>
    <string name="menu_searchmarker">Search Landmarks</string>

    <!--Add Marker-->
    <string name="ok">OK</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="address">Address: </string>
    <string name="title">Title: </string>
    <string name="notes">Notes(Description): </string>

    <!--Facebook App ID-->
    <string name="facebook_app_id">2878840682225573</string>
    <string name="fb_login_protocol_scheme">fb2878840682225573</string>

    <string name="title_activity_maps">Map</string>
    <string name="add_new_note">Add New Note</string>
    <string name="success">Successfully Added.</string>
    <string name="click_marker">Click on marker to add notes</string>
    <string name="title_cannot_be_empty"><![CDATA[Title & Description cannot be empty]]></string>
    <string name="not_auth">You are not authorized.</string>
    <string name="granted">Permission granted</string>
    <string name="denied">Permission denied</string>
    <string name="alert_title">Alert</string>
    <string name="delete_alert_message">Sorry, you cannot delete other user\'s note.</string>
    <string name="no_note_alert_message">Sorry, no notes found.</string>

</resources>