<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_myMarkers"
            android:icon="@drawable/ic_location_on_24"
            android:title="@string/menu_mymarkers" />
        <item
            android:id="@+id/nav_allMarkers_onMap"
            android:icon="@drawable/ic_map_24"
            android:title="@string/menu_allmarkers_onmap" />
        <item
            android:id="@+id/nav_searchMarkers"
            android:icon="@drawable/ic_search_24"
            android:title="@string/menu_searchmarker" />
    </group>
</menu>