<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddNewNoteActivity">


    <TextView
        android:id="@+id/addMarker_name_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ten_margin"
        android:gravity="center"
        android:padding="@dimen/ten_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/ten_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addMarker_title_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/title"
            android:inputType="textCapSentences"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/ten_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addMarker_desc_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notes"
            android:inputType="textCapSentences|textMultiLine"
            android:minLines="5"
            android:scrollbars="vertical" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/addMarker_address_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:padding="@dimen/ten_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
        android:id="@+id/addMarker_SubmitBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/ten_margin"
        android:padding="@dimen/ten_margin"
        android:text="@string/submit"></Button>


</LinearLayout>